# GTFS_ChatBuilder

./: .env.example  .gitignore  README.md  TESTING.md  pyproject.toml  run.py  実機テスト手順.md
src/gtfs_chatbuilder/: agents.py  app.py  controllers.py  excel_template.py  friendly_names.py  gtfs_writer.py  paths.py  progress.py
src/gtfs_chatbuilder/processors/: __init__.py  encoding.py  kml.py  shapes.py  stop_times.py  stops_normalizer.py  timetable_io.py  timetable_normalizer.py
src/gtfs_chatbuilder/tools/: agency.py  feed_info.py  kml.py  project_status.py  routes.py  shapes.py  stop_times.py  stops.py
src/gtfs_chatbuilder/validators/: __init__.py  agency.py  attributions.py  base.py  calendar.py  calendar_dates.py  fare_attributes.py  fare_rules.py  feed_info.py  routes.py  shapes.py  stop_times.py  stops.py  transfers.py  translations.py  trips.py
