[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtfs-chatbuilder"
version = "0.1.0"
description = "GTFS-JP作成チャットアプリ (LangChain Middleware による利用者確認層 + 決定論的ファイル生成)"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.52.1",
    "langchain>=1.1.3",
    "langchain-google-genai>=2.1.0",
    "langgraph>=1.0.4",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.0",
    "openpyxl>=3.1.0",
    "langchain-openai>=1.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]
